--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="image.png" class="img">
     <button class="next">></button>
 </div>
-<div class="div"><a href=""> <P class="a">ай авал сар бкн</P></div>
+<div class="div"><a href=""> <P class="a">Restart</P></div>
     <script src="index1.js"></script>
 </body>
 </html>
